<resources>
    <string name="app_name">Seminho</string>
    <string name="actionNewEvent">New Event</string>
    <string name="actionAuth">Login</string>
    <string name="actionLogOut">Log out</string>
    <string name="actionChangeTheme">Change theme</string>
    <string name="actionEditCategory">Edit categories</string>
    <string name="actionImport">File import</string>
    <string name="actionImportExport">Import/Export</string>
    <string name="actionImportFromUrl">Import from URL</string>
    <string name="actionImportServerData">Import from server</string>
    <string name="actionExport">File export</string>
    <string name="actionExportToServer">Server export</string>
    <string name="actionSettings">Settings</string>
    <string name="actionSelectSound">Select sound</string>
    <string name="actionAdvance">Time advance</string>
    <string name="actionAbout">About</string>
    <string name="aboutCompany">International Network Support &#38; Service - Glas</string>
    <string name="aboutVersion">1.0</string>
    <string name="event_properties">Event Properties</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="dateTime">Date</string>
    <string name="alarmName">Alarm Name</string>
    <string name="startTime">Start Time</string>
    <string name="finishTime">End Time</string>
    <string name="titleMain">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="Time">Time</string>
    <string name="ErrorAdding">ERROR with adding event</string>
    <string name="add">Added event</string>
    <string name="update">Updated event</string>
    <string name="notEvents">No events</string>
    <string name="day"> day </string>
    <string name="days"> days </string>
    <string name="hour"> hour </string>
    <string name="hours"> hours </string>
    <string name="minute"> minute </string>
    <string name="minutes"> minutes </string>
    <string name="advanceResult">Advance is set</string>
    <string name="exportCompleted">Calendar saved</string>
    <string name="importCompleted">Calendar imported</string>
    <string name="zeroMinutes">0 minutes</string>
    <string name="buttonOk">Ok</string>
    <string name="buttonAdd">New Category</string>
    <string name="buttonDeleteCategory">Delete Category</string>
    <string name="changeCategory">Change</string>
    <string name="newCategory">New Category</string>
    <string name="addNewCategory">Add</string>
    <string name="deleteNotification">Delete notification</string>
    <string name="saveAdvance">Save delay </string>
    <string name="showEvent">Show event</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonDownload">Download</string>
    <string name="buttonUpload">Upload</string>
    <string name="noNextEvent">No next event</string>
    <string name="noEvents">No events</string>
    <string name="the">The</string>
    <string name="nextEvents">next events</string>
    <string name="now">Now</string>
    <string name="till">till</string>
    <string name="removeEvent">Remove event</string>
    <string name="removeEventError">Remove error</string>
    <string name="deleteFromFirestore">Delete from Firestore</string>
    <string name="pleaseSelectAdvance">Please select advance</string>
    <string name="pleaseLogin">Please log in</string>
    <string name="pathURL">https://inss.ch/downloads/Test.ics</string>
    <string name="saveDelay">Save delay</string>
    <string name="alarmDeleted">Alarm deleted</string>
    <string name="installed">Installed</string>
    <string name="deleted">Deleted</string>
    <string name="saved">Saved</string>
    <string name="exportText">Export</string>
    <string name="importText">Import</string>
    <string name="exportFileDescription">Exports all events into Seminho.ics file</string>
    <string name="exportServerDescription">Uploads all data to the server (Backup)</string>

    <string name="importFileDescription">Import an ics file from the local filesystem</string>
    <string name="importUrlDescription">Define a URL with an ics file to import events</string>
    <string name="importServerDescription">Imports all data from the server (Restore)</string>
    <string-array name="categories">
        <item>Event</item>
        <item>Date</item>
        <item>Business</item>
        <item>Private</item>
    </string-array>
</resources>
