<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/actionNewEvent"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/actionNewEvent"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/actionAuth"
        android:orderInCategory="100"
        android:title="@string/actionAuth"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionLogOut"
        android:orderInCategory="100"
        android:title="@string/actionLogOut"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionImport"
        android:orderInCategory="100"
        android:title="@string/actionImport"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionImportURL"
        android:orderInCategory="100"
        android:title="@string/actionImportFromUrl"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionImportServerData"
        android:orderInCategory="100"
        android:title="@string/actionImportServerData"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionExport"
        android:orderInCategory="100"
        android:title="@string/actionExport"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_build_white_24dp"
        android:orderInCategory="100"
        android:title="@string/actionSettings"
        app:showAsAction="ifRoom"

        >
        <menu

            >
            <item
                android:id="@+id/actionAdvance"
                android:orderInCategory="100"
                android:title="@string/actionAdvance"
                app:showAsAction="never" />
            <item
                android:id="@+id/actionSelectSound"
                android:orderInCategory="100"
                android:title="@string/actionSelectSound"
                app:showAsAction="never" />
            <item
                android:id="@+id/actionEditCategories"
                android:orderInCategory="100"
                android:title="@string/actionEditCategory"
                app:showAsAction="never" />

            <item
                android:id="@+id/actionChangeTheme"
                android:orderInCategory="100"
                android:title="@string/actionChangeTheme"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/actionExportToServer"
        android:orderInCategory="100"
        android:title="@string/actionExportToServer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionAbout"
        android:orderInCategory="100"
        android:title="@string/actionAbout"
        app:showAsAction="never" />
</menu>