<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:id="@+id/llImEx"
    android:background="?attr/colorPrimary"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/exportText"
    android:textSize="28dp"
    />

    <Button
        android:text="@string/actionExport"
        android:id="@+id/btnExportFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exportFileDescription"
        android:textSize="14dp"
        />
    <Button
        android:text="@string/actionExportToServer"
        android:id="@+id/btnExportServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exportServerDescription"
        android:textSize="14dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/importText"
        android:textSize="28dp"
        />
<Button
    android:id="@+id/btnImportFile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/actionImport"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/importFileDescription"
        android:textSize="14dp"
        />

    <Button
        android:text="@string/actionImportFromUrl"
        android:id="@+id/btnImportUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/importUrlDescription"
        android:textSize="14dp"
        />
    <Button
        android:id="@+id/btnImportServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actionImportServerData"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/importServerDescription"
        android:textSize="14dp"
        />

</LinearLayout>