<?xml version="1.0" encoding="utf-8"?><!--android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"


   -->


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorButtonNormal">


    <LinearLayout

        android:id="@+id/llStartTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"


        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/guideline8"
        app:layout_constraintLeft_toRightOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline7">

        <EditText
            android:id="@+id/etStartHours"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="hh"
            android:inputType="datetime"
            android:text=""
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=":"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etStartMin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="mm"
            android:inputType="date"
            android:text=""
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvFinishTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="8dp"
        android:layout_row="3"
        android:gravity="center"
        android:text="@string/finishTime"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline9" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_row="1"
        android:layout_rowSpan="3"
        android:background="@drawable/edit_text_style"
        android:hint="This event is"
        android:padding="8dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView


        android:id="@+id/tvCategory"
        android:layout_width="0dp"

        android:layout_height="0dp"


        android:gravity="center"
        android:text="@string/category"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinnerCategories"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"

        android:layout_marginRight="8dp"
        android:background="@drawable/spinner"


        android:gravity="fill_vertical|fill_horizontal|center"


        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintLeft_toRightOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_gravity="left|center_vertical|center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dateTime"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <LinearLayout
        android:id="@+id/llDateTime"
        android:layout_width="0dp"
        android:layout_height="0dp"


        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintLeft_toRightOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5">

        <EditText
            android:id="@+id/etDay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="dd"
            android:inputType="date"
            android:text=""
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=":"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="mm"
            android:inputType="date"
            android:text=""
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=":"

            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="yy"
            android:inputType="date"
            android:text=""
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp" />

    </LinearLayout>

    <!--EditText
        android:id="@+id/etAlarmName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_style"

        android:gravity="center"
        android:hint=" wake up "
        android:text=""
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintLeft_toRightOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline7" />

    <TextView
        android:id="@+id/tvAlarmName"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="left|center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/alarmName"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline7" /-->

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="8dp"
        android:layout_row="3"
        android:gravity="center"
        android:text="@string/startTime"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline7" />

    <LinearLayout

        android:id="@+id/llFinishTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"


        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/guideline10"
        app:layout_constraintLeft_toRightOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline9">

        <EditText
            android:id="@+id/etFinishHours"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="hh"
            android:inputType="datetime"
            android:text=""
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=":"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etFinishMin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/edit_text_style"
            android:gravity="center"
            android:hint="mm"
            android:inputType="date"
            android:text=""
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintRight_toLeftOf="@id/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</android.support.constraint.ConstraintLayout>


    <!--/android.support.v7.widget.CardView-->